// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav should render 1`] = `<ul class="nav-root nav" role="tablist"></ul>`;

exports[`Nav should render vertically 1`] = `<ul class="nav-root flex-column nav" role="tablist"></ul>`;

exports[`Nav should render with items 1`] = `
<ul class="nav-root nav" role="tablist">
  <li class="nav-item" role="presentation" active="" href="#">
    <a class="nav-link active" href="#" role="tab">foo</a>
  </li>
  <li class="nav-item" role="presentation">bar</li>
  <li class="nav-item" role="presentation">baz</li>
</ul>
`;

exports[`Nav should render with items as pills 1`] = `
<ul class="nav-root nav nav-pills" role="tablist">
  <li class="nav-item" role="presentation" active="" href="#">
    <a class="nav-link active" href="#" role="tab">foo</a>
  </li>
  <li class="nav-item" role="presentation">bar</li>
  <li class="nav-item" role="presentation">baz</li>
</ul>
`;

exports[`Nav should render with items as tabs 1`] = `
<ul class="nav-root nav nav-tabs" role="tablist">
  <li class="nav-item" role="presentation" active="" href="#">
    <a class="nav-link active" href="#" role="tab">foo</a>
  </li>
  <li class="nav-item" role="presentation">bar</li>
  <li class="nav-item" role="presentation">baz</li>
</ul>
`;

exports[`Nav should render with underline class 1`] = `
<ul class="nav-root nav nav-underline" role="tablist">
  <li class="nav-item" role="presentation" active="" href="#">
    <a class="nav-link active" href="#" role="tab">foo</a>
  </li>
  <li class="nav-item" role="presentation">bar</li>
  <li class="nav-item" role="presentation">baz</li>
</ul>
`;
